Absolute image paths

--- a/about/index.html
+++ b/about/index.html
@@ -32,14 +32,14 @@ title: About
         <img
           alt="Plumbing Industry Council"
           class="aff-logo"
-          src="/images/about/pic.jpg"
+          src="images/about/pic.jpg"
         />
       </div>
       <div class="span1-2">
         <img
           alt="Plumbers and Pipefitter Local 562 Union"
           class="aff-logo pp-local"
-          src="/images/about/local562.jpg"
+          src="images/about/local562.jpg"
         />
       </div>
     </div>
@@ -48,21 +48,21 @@ title: About
         <img
           alt="Missouri Association of Plumbing Heating Cooling Contractors"
           class="aff-logo"
-          src="/images/about/maphcc.jpg"
+          src="images/about/maphcc.jpg"
         />
       </div>
       <div class="span1-3">
         <img
           alt="Plumbing Heating Cooling Contractors"
           class="aff-logo"
-          src="/images/about/phcc.jpg"
+          src="images/about/phcc.jpg"
         />
       </div>
       <div class="span1-3">
         <img
           alt="American Society of Plumbing Engineers"
           class="aff-logo"
-          src="/images/about/aspe.jpg"
+          src="images/about/aspe.jpg"
         />
       </div>
     </div>
@@ -111,19 +111,19 @@ title: About
     <div class="span1-2">
       <img
         class="historic-img"
-        src="/images/history/family-then.jpg"
+        src="images/history/family-then.jpg"
       />
       <img
         class="historic-img"
-        src="/images/history/truck-1.jpg"
+        src="images/history/truck-1.jpg"
       />
       <img
         class="historic-img"
-        src="/images/history/joe.jpg"
+        src="images/history/joe.jpg"
       />
       <img
         class="historic-img"
-        src="/images/history/truck-2.jpg"
+        src="images/history/truck-2.jpg"
       />
     </div>
   </div>
