Validator updates (removed hgroups)

--- a/about/index.html
+++ b/about/index.html
@@ -22,10 +22,12 @@ title: About
 <section id="about-stripe" class="stripe-bg">
   <div id="about-overlay" class="overlay-wrapper">
     <div class="group">
-      <hgroup class="span1-1">
-        <h1>Affiliations</h1>
+      <div class="span1-1">
+        <div class="heading">
+          <h1>Affiliations</h1>
+        </div>
         <p>We are committed to providing you the highest quality service. We're proud to be a part of these organizations that join us with other professionals in the industry to maintain best practices and continue learning the newest technologies.</p>
-      </hgroup>
+      </div>
     </div>
     <div class="group aff-logos">
       <div class="span1-2">
