--- a/commercial/index.html
+++ b/commercial/index.html
@@ -6,9 +6,7 @@ title: Commercial Services
 <div class="section bg-dark-blue">
   <div class="page-header">
     <div class="span1-2 left-header">
-      <hgroup>
-        <h1>Commercial</h1>
-      </hgroup>
+      <h1>Commercial</h1>
       <p>No matter the size of your business, Linek Plumbing is the right choice for your project. After a century in business, we have a vast range of experience in many different types of commercial projects. We offer emergency services 24/7, so you can count on us to be there when you need us most. From design &amp; build solutions to simple service calls — we have the knowledge and experience to get the job done right the first time.</p>
     </div>
     <div id="plans-img" class="span1-2 right-image"></div>
@@ -18,10 +16,12 @@ title: Commercial Services
 <section id="comm-stripe" class="stripe-bg">
   <div id="comm-overlay" class="overlay-wrapper">
     <div class="group">
-      <hgroup class="span1-1">
-        <h1>Services</h1>
+      <div class="span1-1">
+        <div class="heading">
+          <h1>Services</h1>
+        </div>
         <p>Here’s a list of the most common commercial problems we solve. Give us a call at 314-962-0956 if you have any questions about other services we provide that may not be listed here.</p>
-      </hgroup>
+      </div>
     </div>
     <div class="group">
       <div class="span1-2">
