--- a/contact/index.html
+++ b/contact/index.html
@@ -6,10 +6,9 @@ title: Contact
 <section class="home-contact-section">
   <div class="group">
     <div class="span1-2">
-      <hgroup>
+      <div class="heading">
         <h1 class="bright-blue-color">Contact</h1>
-      </hgroup>
-
+      </div>
       <h2>{{ site.phone }}</h2>
       <address>24 Kirkham Industrial Ct.
         <br/>Webster Groves, MO 63119</address>
