--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@ layout: default
 <section class="bg-dark-blue">
   <div class="hero">
     <div class="residential-hero">
-      <hgroup class="hero-title-group">
+      <div class="hero-title-group">
         <h1>Residential</h1>
         <br />
         <a href="{{ '/residential' }}" class="button">
           Learn More
         </a>
-      </hgroup>
+      </div>
     </div>
     <div class="commercial-hero">
-      <hgroup class="hero-title-group">
+      <div class="hero-title-group">
         <h1>Commercial</h1>
         <br />
         <a href="{{ '/commercial' }}" class="button">
           Learn More
         </a>
-      </hgroup>
+      </div>
     </div>
   </div>
 </section>
@@ -32,11 +32,9 @@ layout: default
 <section class="home-about-section">
   <div class="group">
     <div class="span1-2">
-      <hgroup>
-        <h1 class="bright-blue-color underline">
-          Celebrating <span class="gold-100">100 </span> years!
-        </h1>
-      </hgroup>
+      <h1 class="bright-blue-color underline">
+        Celebrating <span class="gold-100">100 </span> years!
+      </h1>
       <p>
         In 1916, Linek Brothers Plumbing Company was founded by Frank and Henry
         Linek specializing in performing repair service and remodeling. For the
@@ -61,10 +59,7 @@ layout: default
 <section class="home-contact-section">
   <div class="group">
     <div class="span1-2">
-      <hgroup>
-        <h1 class="bright-blue-color">Contact</h1>
-      </hgroup>
-
+      <h1 class="bright-blue-color">Contact</h1>
       <h2>{{ site.phone }}</h2>
       <address>24 Kirkham Industrial Ct.
         <br/>Webster Groves, MO 63119</address>
