--- a/residential/index.html
+++ b/residential/index.html
@@ -6,9 +6,7 @@ title: Residential Services
 <div class="section bg-dark-blue">
   <div class="page-header">
     <div class="span1-2 left-header">
-      <hgroup>
-        <h1>Residential</h1>
-      </hgroup>
+      <h1>Residential</h1>
       <p>Whether you’re dealing with a leaky faucet or tackling a big remodel, Linek Plumbing is the right choice for your project. With over 100 years of experience in the industry, our team can ensure the highest quality work at a fair price. From the special considerations of historic homes to the latest in energy efficient fixtures — we have the knowledge and experience to get the job done right the first time.</p>
     </div>
     <div id="sink-img" class="span1-2 right-image"></div>
@@ -18,10 +16,12 @@ title: Residential Services
 <section id="resi-stripe" class="stripe-bg">
   <div id="resi-overlay" class="overlay-wrapper">
     <div class="group">
-      <hgroup class="span1-1">
-        <h1>What We Do</h1>
+      <div class="span1-1">
+        <div class="heading">
+          <h1>What We Do</h1>
+        </div>
         <p>Here’s a list of the most common residential problems we solve. Give us a call at 314-962-0956 if you have any questions about other services we provide that may not be listed here.</p>
-      </hgroup>
+      </div>
     </div>
     <div class="group">
       <div class="span1-2">
