Updates sans navigation

--- a/about/index.html
+++ b/about/index.html
@@ -69,30 +69,21 @@ title: About
       </div>
     </div>
     <div class="group">
-      <div class="span1-1">
+      <div class="span1-2">
+        <h2>Other Affiliations</h2>
         <ul>
           <li>Many Local Chambers of Commerce including Webster Groves, Kirkwood, Chesterfield, etc.</li>
           <li>Plumbing Industry Council Board of Directors (Past Board Member)</li>
           <li>Past President Plumbing Contractors Association</li>
         </ul>
       </div>
-    </div>
-    <h2>Licensing</h2>
-    <div class="group">
       <div class="span1-2">
-        <h4>William J. Linek, President</h4>
+        <h2>Licensing</h2>
         <ul>
-          <li>Master Plumber, St. Louis City and County
-            Jefferson County, St. Charles City and County</li>
-          <li>Master Drain Layer, St. Louis City and County, Jefferson County, St. Charles City and County</li>
-          <li>Master Plumber, State of Illinois</li>
-        </ul>
-      </div>
-      <div class="span1-2">
-        <h4>James G. Linek, Treasurer</h4>
-        <ul>
-          <li>Master Plumber, St. Louis City and County</li>
-          <li>Master Drain layer, St.. Louis City and County</li>
+          <li>St. Louis City and County</li>
+          <li>Jefferson County</li>
+          <li>St. Charles City and County</li>
+          <li>State of Illinois</li>
         </ul>
       </div>
     </div>
