--- a/contact/index.html
+++ b/contact/index.html
@@ -13,10 +13,9 @@ title: Contact
       <address>24 Kirkham Industrial Ct.
         <br/>Webster Groves, MO 63119</address>
 
-      <p>Office Hours are between 7:30am and 4:30pm Monday through Friday.<br/>
-      Outside of those hours, we offer an emergency answering service with plumbers on call 24/7 (at the same phone number).</p>
+      <p>24 Hour Service</p>
 
-      <img class="street-view" src="/images/home/building-front.jpg" alt="Linek Plumbing HQ" />
+      <img class="street-view" src="/images/home/building.jpg" alt="Linek Plumbing HQ" />
     </div>
     <div class="span1-2">
       {% include contact_form.html %}
