--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
       <div class="hero-title-group">
         <h1>Residential</h1>
         <br />
-        <a href="{{ '/residential' }}" class="button">
+        <a href="{{ '/residential'  }}" class="button">
           Learn More
         </a>
       </div>
@@ -33,7 +33,7 @@ layout: default
   <div class="group">
     <div class="span1-2">
       <h1 class="bright-blue-color underline">
-        Celebrating <span class="gold-100">100 </span> years!
+        Celebrating over <span class="gold-100">100 </span> years!
       </h1>
       <p>
         In 1916, Linek Brothers Plumbing Company was founded by Frank and Henry
@@ -48,7 +48,7 @@ layout: default
     </div>
   </div>
   <div class='larger-pic'>
-    <img src="/images/history/family-now.jpg" class="family-now" alt="Linek Plumbing 2016" />
+    <img src="/images/history/van.jpg" class="family-now" alt="Linek Plumbing 2016" />
   </div>
 </section>
 
@@ -63,11 +63,8 @@ layout: default
       <h2>{{ site.phone }}</h2>
       <address>24 Kirkham Industrial Ct.
         <br/>Webster Groves, MO 63119</address>
-
-      <p>Office Hours are between 7:30am and 4:30pm Monday through Friday.<br/>
-      Outside of those hours, we offer an emergency answering service with plumbers on call 24/7 (at the same phone number).</p>
-
-      <img class="street-view" src="/images/home/building-front.jpg" alt="Linek Plumbing HQ" />
+      <p>24 Hour Service</p>
+      <img class="street-view" src="/images/home/building.jpg" alt="Linek Plumbing HQ" />
     </div>
     <div class="span1-2">
       {% include contact_form.html %}
