--- a/residential/index.html
+++ b/residential/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Residential Services
+permalink: /residential/
 ---
 
 <div class="section bg-dark-blue">
@@ -99,8 +100,4 @@ title: Residential Services
       <img src="/images/residential/brands-06.jpg">
     </div>
   </div>
-</section>
-
-<section class="service-areas">
-  {% include service_areas.html %}
 </section>
